--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -5,14 +5,20 @@
 .card {
   cursor: pointer;
   border: none;
-
-  width: 200px;
+  width: 100%;
   height: 100%;
+  max-width: 336px;
 }
 
 .card-image {
   width: 100%;
-  height: 160px;
+
+  .image {
+    width: 100%;
+    height: 100%;
+    max-height: 160px;
+    border-radius: 5px 5px 0 0;
+  }
 
   .flag {
     width: 100% !important;
