--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -1,4 +1,4 @@
-@import './variables';
+@import "./variables";
 
 /* Card */
 
@@ -16,6 +16,7 @@
   .image {
     width: 100%;
     height: 100%;
+    min-height: 160px;
     max-height: 160px;
     border-radius: 5px 5px 0 0;
   }
@@ -29,7 +30,8 @@
 
 .card-body {
   .card-title {
-    font-family: 'Nunito Sans';
+    text-align: left;
+    font-family: "Nunito Sans";
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
@@ -37,7 +39,8 @@
     color: $VeryDarkBlue2;
   }
   .card-text {
-    font-family: 'Nunito Sans';
+    text-align: left;
+    font-family: "Nunito Sans";
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -50,3 +53,18 @@
 }
 
 /* Card end*/
+
+.country-input {
+  height: 48px;
+  border-radius: 5px;
+}
+
+.icon {
+  margin-top: 10px;
+  margin-right: 20px;
+  margin-left: 30px;
+}
+
+.form-control {
+  border: none;
+}
