--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -1,4 +1,4 @@
-@import './variables';
+@import "./variables";
 
 /* Card */
 
@@ -15,7 +15,6 @@
 
   .image {
     width: 100%;
-    height: 100%;
     min-height: 160px;
     max-height: 160px;
     border-radius: 5px 5px 0 0;
@@ -31,7 +30,7 @@
 .card-body {
   .card-title {
     text-align: left;
-    font-family: 'Nunito Sans';
+    font-family: "Nunito Sans";
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
@@ -40,7 +39,7 @@
   }
   .card-text {
     text-align: left;
-    font-family: 'Nunito Sans';
+    font-family: "Nunito Sans";
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
