--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -1,4 +1,4 @@
-@import "./variables";
+@import './variables';
 
 /* Card */
 
@@ -30,7 +30,7 @@
 .card-body {
   .card-title {
     text-align: left;
-    font-family: "Nunito Sans";
+    font-family: 'Nunito Sans';
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
@@ -39,7 +39,7 @@
   }
   .card-text {
     text-align: left;
-    font-family: "Nunito Sans";
+    font-family: 'Nunito Sans';
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -62,4 +62,9 @@
   margin-top: 10px;
   margin-right: 20px;
   margin-left: 30px;
+}
+
+.detail-card-image {
+  width: 100%;
+  height: 100%;
 }
