--- a/src/App.scss
+++ b/src/App.scss
@@ -6,3 +6,20 @@ main {
   width: 100%;
   height: 90vh;
 }
+
+.link {
+  color: black;
+  text-decoration: none;
+}
+
+.back-link {
+  width: 100px;
+  color: black;
+  border: 1px solid red;
+  text-decoration: none;
+  border-radius: 5px;
+
+  &:hover {
+    color: black;
+  }
+}
