--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -1,4 +1,4 @@
-@import './variables';
+@import "./variables";
 
 /* Card */
 
@@ -30,7 +30,7 @@
 .card-body {
   .card-title {
     text-align: left;
-    font-family: 'Nunito Sans';
+    font-family: "Nunito Sans";
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
@@ -39,7 +39,7 @@
   }
   .card-text {
     text-align: left;
-    font-family: 'Nunito Sans';
+    font-family: "Nunito Sans";
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -67,4 +67,5 @@
 .detail-card-image {
   width: 100%;
   height: 100%;
+  border-radius: 10px;
 }
