--- a/src/App.scss
+++ b/src/App.scss
@@ -13,18 +13,19 @@ main {
 }
 
 .back-link {
-  width: 100px;
-  color: black;
-  border: 1px solid red;
-  text-decoration: none;
+  height: 32px !important;
   border-radius: 5px;
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
-  &:hover {
+  a {
     color: black;
+    text-decoration: none !important;
+    &:hover {
+      color: black;
+    }
   }
-}
 
-.link {
   &:hover {
     color: black;
   }
