--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -1,4 +1,4 @@
-@import "./variables";
+@import './variables';
 
 /* Card */
 
@@ -31,7 +31,7 @@
 .card-body {
   .card-title {
     text-align: left;
-    font-family: "Nunito Sans";
+    font-family: 'Nunito Sans';
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
@@ -40,7 +40,7 @@
   }
   .card-text {
     text-align: left;
-    font-family: "Nunito Sans";
+    font-family: 'Nunito Sans';
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
@@ -52,6 +52,11 @@
   }
 }
 
+.link {
+  &:hover {
+    color: black;
+  }
+}
 /* Card end*/
 
 .country-input {
@@ -69,4 +74,15 @@
   width: 100%;
   height: 100%;
   border-radius: 10px;
+}
+
+.bold {
+  font-size: 14px !important;
+  line-height: 32px;
+  color: #111517;
+  margin-right: 5px;
+}
+
+p {
+  font-size: 11px;
 }
