--- a/src/scss/navbar.scss
+++ b/src/scss/navbar.scss
@@ -1,4 +1,4 @@
-@import "./variables";
+@import './variables';
 
 .navigation {
   height: 80px;
@@ -21,9 +21,10 @@
     font-style: normal;
     font-weight: 600;
     font-size: 16px;
-    line-height: 16px;
     color: $VeryDarkBlue2;
     cursor: pointer;
+    margin-bottom: 0;
+    margin-top: 7px;
   }
 
   .moon {
@@ -38,6 +39,7 @@
 @media only screen and (max-width: 767px) {
   .where {
     font-size: 14px !important;
+    line-height: 20px;
   }
 
   .country-input {
