--- a/src/scss/cardDetail.scss
+++ b/src/scss/cardDetail.scss
@@ -11,8 +11,7 @@
 }
 
 .back-link {
-  width: 104px !important;
-  height: 32px;
+  font-size: 11px;
   text-decoration: none;
   text-align: center;
   color: black;
@@ -21,4 +20,10 @@
   &:hover {
     color: black;
   }
+}
+
+.link-container {
+  margin-right: 5px;
+  height: 28px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
