--- a/src/App.scss
+++ b/src/App.scss
@@ -11,3 +11,41 @@ main {
   color: black;
   text-decoration: none;
 }
+
+.back-link {
+  width: 104px;
+  height: 32px;
+  border-radius: 2px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  font-size: 10px;
+  text-align: center;
+  padding: 5px;
+  color: black;
+  margin-right: 6px;
+  cursor: pointer;
+
+  a {
+    font-size: 14px;
+    text-decoration: none;
+    color: #111517;
+    &:hover {
+      color: black;
+    }
+  }
+}
+
+.border-link {
+  font-size: 10px;
+  text-align: center;
+
+  margin-right: 6px;
+
+  a {
+    text-decoration: none;
+    color: black;
+  }
+
+  &:hover {
+    color: black;
+  }
+}
