--- a/src/scss/cardDetail.scss
+++ b/src/scss/cardDetail.scss
@@ -10,20 +10,11 @@
   font-size: 16px;
 }
 
-.back-link {
-  font-size: 11px;
-  text-decoration: none;
-  text-align: center;
-  color: black;
-  margin-right: 6px;
-
-  &:hover {
-    color: black;
-  }
-}
-
 .link-container {
   margin-right: 5px;
   height: 28px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+p {
+  font-size: 12px;
 }
