--- a/src/scss/searchAndFilter.scss
+++ b/src/scss/searchAndFilter.scss
@@ -12,6 +12,10 @@
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+
+.search-inputs {
+  border-radius: 5px;
+}
 /* mobile  */
 @media only screen and (max-width: 767px) {
   .country-input {
@@ -24,6 +28,12 @@
 
   .form-select {
     margin-top: 40px;
+  }
+}
+
+@media only screen and (min-width: 767px) and (max-width: 1224px) {
+  .form-select {
+    margin-top: 48px;
   }
 }
 
