--- a/src/scss/searchAndFilter.scss
+++ b/src/scss/searchAndFilter.scss
@@ -39,6 +39,7 @@
 
 @media only screen and (min-width: 1224px) and (max-width: 1440px) {
   .form-select {
+    height: 38px !important;
     margin-top: 48px;
   }
 }
