--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@
 
 main {
   width: 100%;
-  height: 90vh;
+  height: 100%;
 }
 
 .link {
@@ -37,21 +37,6 @@ main {
   }
 }
 
-.border-link {
-  font-size: 10px;
-  text-align: center;
-  margin-right: 3px !important;
-
-  a {
-    text-decoration: none;
-    color: black;
-
-    &:hover {
-      color: black;
-    }
-  }
-}
-
 // Light dark Mode
 
 #light {
@@ -60,6 +45,15 @@ main {
 
 #dark {
   background-color: $VeryDarkBlue;
+}
+
+#dark .main {
+  background-color: $VeryDarkBlue;
+  height: 100vh !important;
+}
+
+#dark .main-root {
+  height: 100vh !important;
 }
 
 #dark .country-card {
