--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -57,6 +57,14 @@
   }
 }
 
+.no-countries-container {
+  height: 100vh;
+}
+
+#dark .no-countries {
+  color: $White;
+}
+
 .link {
   &:hover {
     color: black;
@@ -67,10 +75,4 @@
 .country-input {
   height: 48px;
   border-radius: 5px;
-}
-
-.detail-card-image {
-  width: 100%;
-  height: 100%;
-  border-radius: 10px;
 }
