--- a/src/scss/cardDetail.scss
+++ b/src/scss/cardDetail.scss
@@ -8,10 +8,6 @@
   font-weight: bold;
 }
 
-#dark .bold {
-  color: $White;
-}
-
 .borders-heading {
   font-size: 16px;
 }
@@ -24,6 +20,58 @@
 p {
   font-size: 12px;
 }
+
+.border-link {
+  font-size: 10px;
+  text-align: center;
+  margin-right: 3px !important;
+
+  a {
+    text-decoration: none;
+    color: black;
+
+    &:hover {
+      color: black;
+    }
+  }
+}
+
+.detail-card-image {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+}
+
+// Light dark Mode
+
+#dark .detail-card-container {
+  height: 90vh !important;
+}
+
+#dark p {
+  color: $White !important;
+}
+
+#dark .back-link-link {
+  color: $White !important;
+}
+
+#dark .bold {
+  color: $White;
+}
+
+#dark .country-name {
+  color: $White;
+}
+
+#dark .borders-heading {
+  color: $White !important;
+}
+
+#dark .border-link-text {
+  color: $White !important;
+}
+// breakpoints
 
 @media only screen and (max-width: 768px) {
   .card-detail-container {
