break point fixes

--- a/src/scss/cardDetail.scss
+++ b/src/scss/cardDetail.scss
@@ -98,7 +98,7 @@ p {
   }
 }
 
-@media only screen and (min-width: 1224px) and (max-width: 1899px) {
+@media only screen and (min-width: 1224px) {
   .detail-card-container {
     margin-top: 70px;
   }
