--- a/src/scss/card.scss
+++ b/src/scss/card.scss
@@ -1,4 +1,4 @@
-@import "./variables";
+@import './variables';
 
 /* Card */
 
@@ -8,16 +8,19 @@
   width: 100%;
   height: 100%;
   max-width: 264px;
-  min-width: 264px !important;
+  min-height: 336px;
 }
 
 .card-image {
   width: 100%;
+  min-height: 170px;
+  min-width: 263px;
+  max-width: 280px;
+  max-height: 175px;
 
   .image {
     width: 100%;
-    min-height: 160px;
-    max-height: 160px;
+    height: 100%;
     border-radius: 5px 5px 0 0;
   }
 
@@ -31,7 +34,7 @@
 .card-body {
   .card-title {
     text-align: left;
-    font-family: "Nunito Sans";
+    font-family: 'Nunito Sans';
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
@@ -40,7 +43,7 @@
   }
   .card-text {
     text-align: left;
-    font-family: "Nunito Sans";
+    font-family: 'Nunito Sans';
     font-style: normal;
     font-weight: 600;
     font-size: 14px;
