--- a/src/scss/cardDetail.scss
+++ b/src/scss/cardDetail.scss
@@ -39,14 +39,18 @@ p {
 .detail-card-image {
   width: 100%;
   height: 100%;
+  max-height: 385px;
   border-radius: 10px;
 }
 
 // Light dark Mode
 
 #dark .detail-card-container {
-  height: 100% !important;
   background-color: $VeryDarkBlue;
+}
+
+#dark .detail-card-image {
+  border: none !important;
 }
 
 #dark p {
@@ -108,5 +112,9 @@ p {
 
   .top-level {
     margin-top: 20px;
+  }
+
+  .detail-card-image {
+    height: 401px !important;
   }
 }
