--- a/src/scss/cardDetail.scss
+++ b/src/scss/cardDetail.scss
@@ -39,8 +39,11 @@ p {
 .detail-card-image {
   width: 100%;
   height: 100%;
-  max-height: 385px;
   border-radius: 10px;
+}
+
+.borders-row {
+  margin-left: 0 !important;
 }
 
 // Light dark Mode
